src/index.scss
@import '~bootstrap/scss/bootstrap';

* {
  color: #082567;
}

h1, h2 {
	text-align: center;
}

a.nav-item.nav-link.active {
  background: #082567;
  color: white;
}

.nav-item {
  background: #aaa9ad;
  color: white;
  margin: 2px;
}

.footer-text {
  text-align: center;
}

.pageContainer {
  position: relative;
  min-height: 100vh;
}

.content {
  padding-bottom: 2.5rem;
}

#footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 2.5rem;
}

.pic {
  display: block;
	margin-left: auto;
  margin-right: auto;
  margin-top: 20px;
  margin-bottom: 10px;
  max-width: 400px;
  max-height: 400px;
  border: 8px solid #aaa9ad;
  border-radius: 25px;
}

.about {
	max-width: 500px;
	margin-right: auto;
	margin-left: auto;
	margin-top: 20px;
}

.welcomeText {
	max-width: 500px;
	margin-right: auto;
	margin-left: auto;
}

.carousel {
	max-width: 800px;
  margin-left: auto;
  margin-right: auto;
}

@media(prefers-color-scheme: dark) {
  * {
    background: black;
    color: white;
  }
  h1, h2, ul {
    text-align: center;
  }

  .footer-text {
    text-align: center;
  }

  .pic {
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
    margin-bottom: 10px;
    max-width: 400px;
    max-height: 400px;
    border: 8px solid #082567;
    border-radius: 25px;
  }

  .about {
    max-width: 600px;
    margin-right: auto;
    margin-left: auto;
    margin-top: 20px;
  }

  .welcomeText {
    max-width: 500px;
    margin-right: auto;
    margin-left: auto;
  }

  a.nav-item.nav-link.active {
    background: #082567;
    color: white;
  }
  
  .nav-item {
    background: #343a40;
    color: white;
    margin: 2px;
  }

  .pageContainer {
    position: relative;
    min-height: 100vh;
  }

  .content {
    padding-bottom: 2.5rem;
  }

  #footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 2.5rem;
  }
	
  .carousel {
  	max-width: 800px;
    margin-left: auto;
    margin-right: auto;
  }
}

